# nanovar

./: .gitignore  .travis.yml  CHANGELOG.txt  MANIFEST.in  README.md  pyproject.toml  requirement.txt  requirements.txt  setup.py  setup_cy.py
nanovar/: __init__.py  nanovar  nv_align.py  nv_alt_seq.py  nv_bam_parser.c  nv_bam_parser.pyx  nv_bed_valid.py  nv_characterize.py  nv_cluster.py  nv_cov_upper.py  nv_detect_algo.py  nv_dup_te_detect.py  nv_input.py  nv_nn.py  nv_parser.py  nv_report.py  nv_te_analyzer.py  nv_valid.py  nv_vcf.py  version.py
nanovar/gaps/: hg19_filter.bed  hg38_curated_filter_main.bed  hg38_filter-B400.bed  hg38_filter.bed  mm10_filter.bed
nanovar/model/: ANN.E63B400L2N12-5D0.4-0.3SGDsee31_het_v1.h5  ANN.E63B400L2N12-5D0.4-0.3SGDsee31_het_v2.h5  ANN.E70B100L3N12-5D0.4-0.2SGDsee11_het_v5.h5
nanovar/ref/: hg38_L1_Alu.fa
scripts/: NA12878_recall_evaluation.txt  NNtrain_tutorial.md  benchmark_evaluation_example.txt  custom_ins_list_RSVSim.py  precision_recall.py  simulated_reads_generation.txt  sv_class_radar.txt  sv_genome_generation.txt  sv_repeats_analysis.py  sv_tool_evaluation.txt  total_viral_genome.fa
scripts/model_toolkit/: NN_model_prep.py  custom_ins_list_RSVSim.py  total_viral_genome.fa
src/nanovar/: nanovar.py  nv_alt_seq.py  nv_bam_parser.pyx  nv_input.py  nv_report.py  nv_supp_bam.py  version.py
src/nanovar/gaps/: hg19_filter-B400.bed  mm10_filter-B400.bed
src/nanovar/model/: ANN.E100B400L3N12-5D0.4-0.2SGDsee11_het_ccs_v1.h5  ANN.E100B400L3N12-5D0.4-0.2SGDsee11_het_clr_v1.h5  ANN.E100B400L3N12-5D0.4-0.2SGDsee11_het_gup_v1.h5
(+1 files in other folders)
